fix z index for mobile-nav (always on top), fix layout shift when nav opens

--- a/app/components/Header/style.module.scss
+++ b/app/components/Header/style.module.scss
@@ -11,9 +11,9 @@
     font-family: $font-family;
 
     &:has(.mobileNav.open) {
-        // fix layout shift when navbar is open
         margin-right: 26px;
     }
+
 }
 
 .search {
@@ -115,7 +115,6 @@
 }
 
 .mobileNav {
-    display: flex;
     display: none;
     align-items: center;
     justify-content: center;
@@ -123,7 +122,7 @@
     .navIcon {
         position: static;
         cursor: pointer;
-        z-index: 10;
+        z-index: 999;
     }
 
     &.open {
@@ -146,6 +145,7 @@
 
     & .nav {
         position: fixed;
+        z-index: 998;
         height: 100vh;
         width: 50%;
         right: 0;
@@ -198,6 +198,7 @@
 
 
 @media (min-width: 1100px) {
+
     .search {
         padding-inline: 20px;
 
